Main Form : begins the implements the management of form states

--- a/main_form.html
+++ b/main_form.html
@@ -11,7 +11,7 @@
     <div class="block form-group">
       <label for="select_manip">Add a manip</label>
       <select id="select_manip">
-        <option value="" selected disabled hidden>Choose here</option>
+        <option value="" disabled hidden>Choose here</option>
       </select>
       <button id="add_manip_button" onclick="addManip()">Add this manip</button>
     </div>
