commit for the main form testing

--- a/main_form.html
+++ b/main_form.html
@@ -8,26 +8,29 @@
 </head>
 
 <body>
-    <div class="block form-group">
-      <label for="select_manip">Add a manip</label>
-      <select id="select_manip">
-        <option value="" disabled hidden>Choose here</option>
-      </select>
-      <button id="add_manip_button" onclick="addManip()">Add this manip</button>
-    </div>
+  <div class="block form-group">
+    <label for="select_manip">Add a manip</label>
+    <select id="select_manip">
+      <option value="" disabled hidden>Choose here</option>
+    </select>
+    <button id="add_manip_button" onclick="addManip()">Add this manip</button>
+  </div>
 
-    <div class="block form-group">
-      <label for="select_user">Select a gadz</label>
-      <select id="select_user">
-      </select>
-    </div>
+  <div class="block form-group">
+    <label for="select_user">Select a gadz</label>
+    <select id="select_user">
+      <option value="" disabled hidden>Choose here</option>
+    </select>
+  </div>
 
 
-    <div id ="input_list" class="block form-group">
-      <label for="input_manip">manip 1</label>
-      <input id="input_manip"/>
-    </div>
+  <div class="block form-group">
+    <label for="input_manip">Manip input</label>
+    <ul id="input_list" class="block form-group">
+    </ul>
+  </div>
 
-    <button class="action">Bucquez</button>
+  <button class="action">Bucquez</button>
 </body>
+
 </html>
