--- a/main_js_1.html
+++ b/main_js_1.html
@@ -60,10 +60,13 @@
        */
       this.isValidated = false;
 
-      // Builds the DOM when the form is displayed
-        Promise.all([this.buildManipSelector(),this.buildUserSelector()])
-        .then(onSuccess)
-        .catch(onError);
+      this.buildManipSelector()
+      .then(onSuccess)
+      .catch(onError);
+
+      this.buildUserSelector()
+      .then(onSuccess)
+      .catch(onError);
     }
 
     /**
@@ -74,18 +77,15 @@
           for (let i = 0; i < manipSelector.options.length; i++) {
             manipSelector.options[i] = null;
           }
-          let newOpt;
           for (let manip of this.manipArray) {
             if (!manip.hasAnInput) {
-              newOpt = document.createElement('option');
-              newOpt.value = manip.name;
-              newOpt.innerHTML = manip.name;
-              manipSelector.appendChild(newOpt);
+              console.log("for loop : " + manip.name);
+              manipSelector.appendChild(getNewManipOption(manip.name));
             }
           }
-          resolve();
-        } catch (e) {
-          reject(JSON.stringify(e));
+          resolve("manip selector building successfull");
+        } catch (err) {
+          reject(err);
         }
       });
     }
@@ -97,26 +97,51 @@
         try {
           let newOpt;
           for (let user of this.userArray) {
-            newOpt = document.createElement('option');
-            newOpt.value = user.id;
-            newOpt.innerHTML = upperFirstLetter(user.firstName) + " " +
-              upperFirstLetter(user.lastName);
-            userSelector.appendChild(newOpt);
+            userSelector.appendChild(getNewUserOption(user));
           }
           resolve("user selector building successfull");
         } catch(e){
-          reject(console.log(JSON.stringify(e)));
+          reject(e);
         }
       })
     }
+
+    addManipInput() {
+      return new Promise((resolve, reject) => {
+        // disabled manipSelector
+
+        const manipValue = manipSelector.value;
+        const manipIndex = this.manipArray.findIndex((manip)=> manip.name === manipValue);
+        const manip = this.manipArray[manipIndex];
+        if(manip && manip.hasAnInput === true){
+            reject("Manip already has an input");
+        }
+
+        createNewInput(manip.name,manipIndex)
+        .then((newInputLi)=>{
+          const inputList = document.getElementByID(INPUT_LIST);
+          inputList.appendChild(newInputLi);
+          manip.hasAnInput = true;
+          resolve();
+        })
+        .catch(onError)
+      })
+      }
+
+
+      removeManipFromSelector(){
+
+      }
   }
 
 
   /**
    * @param {object} err
    */
-  const onError = (err) => {
-    console.error(JSON.stringify(err))
+  const onError = (error) => {
+    console.log("Got an error :")
+    console.log(error.message);
+    console.error(error)
   }
 
   /**
@@ -125,6 +150,43 @@
   const onSuccess = (success) => {
     console.log("Success : " + JSON.stringify(success))
   }
+
+  const getNewUserOption = (user,selected)=> new Option(upperFirstLetter(user.firstName)
+      + " " + upperFirstLetter(user.lastName),
+      user.id, selected? true : false, false)
+
+  const getNewManipOption = (manipName,selected)=> new Option(manipName, manipName, selected? true : false, false)
+
+  const getNewInput = (manipName) => {
+    return new Promise((resolve,reject)=>{
+      const newInputLi = document.createElement("li");
+      newInputLi.manipName = manipName;
+      newInputLi.manipIndex = manipIndex
+      // title
+      const title = document.createElement("h3");
+      title.innerHTML = manipName;
+      // input
+      const input = document.createElement("input");
+      newInputLi.appendChild(document.createElement("input"));
+      // button
+      const button = document.createElement("button");
+      button.innerHTML = "Delete";
+      //button.onClick = () => this.removeManip("manipName");
+
+      newInputLi.appendChild(title);
+      newInputLi.appendChild(input);
+      newInputLi.appendChild(button);
+      resolve(newInputLi)
+    })
+  }
+
+  const inputTemplate = `<li>
+  <h3>
+  <input>
+  <button onClick="test()">
+  </button>
+  </h3>
+  </li>`
 
   /**
    * @param {string} a string
