Css : adds the google css libray

--- a/main_form.html
+++ b/main_form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="https://ssl.gstatic.com/docs/script/css/add-ons1.css">
 
 <head>
   <base target="_top">
